@@ -10,9 +10,6 @@ Should-Have
 - Make it possible to use tween aliases in explicit tween config?  If not,
   the tween factories of all add-ons must be APIs.
 
-- BeforeRender event subclasses dict but implements a bunch of shit.  Its
-  repr is currently broken (it always shows empty).  Decide what to do.
-
 - Come up with an analogue of repoze.zodbconn that doesn't require a closer
   in the pipeline and use it in the ZODB scaffold and tutorial.
 
